tests/compilefail16.out
[1mtests/compilefail16.pas:13:12: [0m[1m[91merror:[0m Type Mismatch - parameter r of addone() must be type real
    13 | 	addone(i);